# internal/handler/biztag/create_biz_tag_handler.go
@@ -1,0 +1,28 @@
+package biztag
+
+import (
+	"net/http"
+
+	"github.com/colinrs/goleaf/internal/logic/biztag"
+	"github.com/colinrs/goleaf/internal/svc"
+	"github.com/colinrs/goleaf/internal/types"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func CreateBizTagHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.CreateBizTagRequest
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := biztag.NewCreateBizTagLogic(r.Context(), svcCtx)
+		resp, err := l.CreateBizTag(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
