# internal/handler/biztag/update_biz_tag_handler.go
@@ -1,0 +1,28 @@
+package biztag
+
+import (
+	"net/http"
+
+	"github.com/colinrs/goleaf/internal/logic/biztag"
+	"github.com/colinrs/goleaf/internal/svc"
+	"github.com/colinrs/goleaf/internal/types"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func UpdateBizTagHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.UpdateBizTageRequest
+		if err := httpx.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+
+		l := biztag.NewUpdateBizTagLogic(r.Context(), svcCtx)
+		resp, err := l.UpdateBizTag(&req)
+		if err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+		} else {
+			httpx.OkJsonCtx(r.Context(), w, resp)
+		}
+	}
+}
