# swagger/goleaf.json
@@ -15,46 +15,494 @@
     "application/json"
   ],
   "paths": {
-    "/from/{name}": {
-      "get": {
-        "operationId": "GoleafHandler",
+    "/api/v1/biztag/create": {
+      "post": {
+        "operationId": "CreateBizTagHandler",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/Response"
+              "$ref": "#/definitions/CreateBizTagResponse"
             }
           }
         },
         "parameters": [
           {
-            "name": "name",
-            "in": "path",
+            "name": "body",
+            "in": "body",
             "required": true,
-            "type": "string"
+            "schema": {
+              "$ref": "#/definitions/CreateBizTagRequest"
+            }
           }
         ],
         "tags": [
-          "goleaf-api"
+          "biztag"
+        ]
+      }
+    },
+    "/api/v1/biztag/deleted": {
+      "delete": {
+        "operationId": "DeletedBizTagHandler",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/DeletedBizTagResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/DeletedBizTageRequest"
+            }
+          }
+        ],
+        "tags": [
+          "biztag"
+        ]
+      }
+    },
+    "/api/v1/biztag/get": {
+      "get": {
+        "operationId": "GetBizTagHandler",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/GetBizTagResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "biztag"
+        ],
+        "consumes": [
+          "multipart/form-data"
+        ]
+      }
+    },
+    "/api/v1/biztag/list": {
+      "get": {
+        "operationId": "ListBizTagHandler",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/ListBizTagResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32",
+            "default": "1"
+          },
+          {
+            "name": "page_size",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32",
+            "default": "10"
+          }
+        ],
+        "tags": [
+          "biztag"
+        ],
+        "consumes": [
+          "multipart/form-data"
+        ]
+      }
+    },
+    "/api/v1/biztag/update": {
+      "put": {
+        "operationId": "UpdateBizTagHandler",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/UpdateBizTagResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UpdateBizTageRequest"
+            }
+          }
+        ],
+        "tags": [
+          "biztag"
+        ]
+      }
+    },
+    "/api/v1/segment/get": {
+      "get": {
+        "operationId": "SegmentHandler",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/SegmentResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "biz_tag",
+            "in": "query",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "step",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int64",
+            "default": "100"
+          }
+        ],
+        "tags": [
+          "idgen"
+        ],
+        "consumes": [
+          "multipart/form-data"
+        ]
+      }
+    },
+    "/api/v1/snowflake/get": {
+      "get": {
+        "operationId": "SnowflakeHandler",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/SnowflakeResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "biz_tag",
+            "in": "query",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "step",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int64",
+            "default": "100"
+          }
+        ],
+        "tags": [
+          "idgen"
+        ],
+        "consumes": [
+          "multipart/form-data"
         ]
       }
     }
   },
   "definitions": {
-    "Request": {
-      "type": "object",
-      "title": "Request"
-    },
-    "Response": {
+    "BizTagData": {
       "type": "object",
       "properties": {
-        "message": {
+        "biz_tag": {
           "type": "string"
+        },
+        "description": {
+          "type": "string",
+          "description": " 描述"
+        },
+        "max_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "step": {
+          "type": "integer",
+          "format": "int64",
+          "default": "100"
         }
       },
-      "title": "Response",
+      "title": "BizTagData",
       "required": [
-        "message"
+        "biz_tag",
+        "description",
+        "max_id"
+      ]
+    },
+    "CreateBizTagRequest": {
+      "type": "object",
+      "properties": {
+        "biz_tag": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string",
+          "description": " 描述"
+        },
+        "max_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "step": {
+          "type": "integer",
+          "format": "int64",
+          "default": "100"
+        }
+      },
+      "title": "CreateBizTagRequest",
+      "required": [
+        "biz_tag",
+        "description",
+        "max_id"
+      ]
+    },
+    "CreateBizTagResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "CreateBizTagResponse",
+      "required": [
+        "id"
+      ]
+    },
+    "DeletedBizTagResponse": {
+      "type": "object",
+      "title": "DeletedBizTagResponse"
+    },
+    "DeletedBizTageRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "DeletedBizTageRequest",
+      "required": [
+        "id"
+      ]
+    },
+    "GetBizTagResponse": {
+      "type": "object",
+      "properties": {
+        "biz_tag": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string",
+          "description": " 描述"
+        },
+        "max_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "step": {
+          "type": "integer",
+          "format": "int64",
+          "default": "100"
+        }
+      },
+      "title": "GetBizTagResponse",
+      "required": [
+        "biz_tag",
+        "description",
+        "max_id"
+      ]
+    },
+    "GetBizTageRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "GetBizTageRequest",
+      "required": [
+        "id"
+      ]
+    },
+    "ListBizTagResponse": {
+      "type": "object",
+      "properties": {
+        "total": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "list": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/BizTagData"
+          }
+        }
+      },
+      "title": "ListBizTagResponse",
+      "required": [
+        "total",
+        "list"
+      ]
+    },
+    "ListBizTageRequest": {
+      "type": "object",
+      "properties": {
+        "page": {
+          "type": "integer",
+          "format": "int32",
+          "default": "1"
+        },
+        "page_size": {
+          "type": "integer",
+          "format": "int32",
+          "default": "10"
+        }
+      },
+      "title": "ListBizTageRequest"
+    },
+    "SegmentRequest": {
+      "type": "object",
+      "properties": {
+        "biz_tag": {
+          "type": "string"
+        },
+        "step": {
+          "type": "integer",
+          "format": "int64",
+          "default": "100"
+        }
+      },
+      "title": "SegmentRequest",
+      "required": [
+        "biz_tag"
+      ]
+    },
+    "SegmentResponse": {
+      "type": "object",
+      "properties": {
+        "ids": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      },
+      "title": "SegmentResponse",
+      "required": [
+        "ids"
+      ]
+    },
+    "SnowflakeRequest": {
+      "type": "object",
+      "properties": {
+        "biz_tag": {
+          "type": "string"
+        },
+        "step": {
+          "type": "integer",
+          "format": "int64",
+          "default": "100"
+        }
+      },
+      "title": "SnowflakeRequest",
+      "required": [
+        "biz_tag"
+      ]
+    },
+    "SnowflakeResponse": {
+      "type": "object",
+      "properties": {
+        "ids": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      },
+      "title": "SnowflakeResponse",
+      "required": [
+        "ids"
+      ]
+    },
+    "UpdateBizTagResponse": {
+      "type": "object",
+      "properties": {
+        "biz_tag": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string",
+          "description": " 描述"
+        },
+        "max_id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "step": {
+          "type": "integer",
+          "format": "int64",
+          "default": "100"
+        }
+      },
+      "title": "UpdateBizTagResponse",
+      "required": [
+        "biz_tag",
+        "description",
+        "max_id"
+      ]
+    },
+    "UpdateBizTageRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "description": {
+          "type": "string",
+          "description": " 描述"
+        },
+        "step": {
+          "type": "integer",
+          "format": "int64",
+          "default": "100"
+        }
+      },
+      "title": "UpdateBizTageRequest",
+      "required": [
+        "id"
       ]
     }
   },
